--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "TI no Canadá"
 description: "Um grupo no telegram sobre tecnologia e imigração para o Canadá"
-baseurl: ""
+baseurl: "/imigracao-para-o-canada/"
 url: "https://ti-no-canada.github.io/imigracao-para-o-canada"
 
 theme: minima
