--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,7 @@ theme: minima
 
 sass:
   style: compressed
-  load_paths:
-    - assets/_sass
+  sass_dir: assets/_sass
 
 header_pages:
   - README.md
